--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="http://localhost:8097"></script>
+    <!--<script src="http://localhost:8097"></script>-->
     <script type='text/javascript'>
     /* <![CDATA[ */
     var wpvars = {"root":"http:\/\/foxelectronics.loco\/wp-json\/","authroute": "jwt-auth\/v1\/token"};
