Updating Fox Loader to work with Oscillators

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
       };
       /**/
     </script>
-    <!--
+    <!---->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
     <script type='text/javascript'>
     /* <![CDATA[ */
@@ -59,7 +59,7 @@
       });
     </script>
     <script type="text/javascript" src="%PUBLIC_URL%/part-loader.js"></script>
-    -->
+    <!---->
   </head>
   <body>
     <noscript>
@@ -70,20 +70,22 @@
       <div class="container" style="border-top: 1px solid #eee; margin-top: 60px; padding-top: 20px;">
         <h5>Default</h5>
         <a href="#" class="foxselect btn btn-sm btn-primary">Open FOXSelect</a>
-        <h5>MHz SMD</h5>
+        <h5>Oscillators - SMD HCMOS MHz</h5>
+        <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FO8HS____-0.0/SMD/MHz">Open FOXSelect (O8HS)</a> <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FO5HS____-0.0/SMD/MHz">Open FOXSelect (O5HS)</a> <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FO7HH____-0.0/SMD/MHz">Open FOXSelect (O7HH)</a>
+        <h5>Crystals - MHz SMD</h5>
         <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FCABS____-0.0/SMD/MHz">Open FOXSelect (CABS)</a>
         <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FC3BS____-0.0/SMD/MHz">Open FOXSelect (C3BS)</a>
         <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FC3BQ____-0.0/SMD/MHz">Open FOXSelect (C3BQ)</a>
-        <h5>kHz SMD</h5>
+        <h5>Crystals - kHz SMD</h5>
         <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FK122____-0.0/SMD/kHz">Open FOXSelect (K122)</a>
 
-        <h5>MHz Pin Thru</h5>
+        <h5>Crystals - MHz Pin Thru</h5>
         <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FC4ST____-0.0/Pin-Thru/MHz">Open FOXSelect (C4ST)</a>
-        <h5>kHz Pin Thru</h5>
+        <h5>Crystals - kHz Pin Thru</h5>
         <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FKT26____-0.0/Pin-Thru/kHz">Open FOXSelect (KT26)</a>
-        <h5>MHz AEC-Q200</h5>
+        <h5>Crystals - MHz AEC-Q200</h5>
         <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FC3BA____-0.0/SMD/MHz">Open FOXSelect (C3BA)</a>
-        <h5>kHz AEC-Q200</h5>
+        <h5>Crystals - kHz AEC-Q200</h5>
         <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FK12A____-0.0/SMD/kHz">Open FOXSelect (K12A)</a>
         <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FK13A____-0.0/SMD/kHz">Open FOXSelect (K13A)</a>
       </div>
