Adding Spread Spectrum button for Oscillators

--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,8 @@
         <a href="#" class="foxselect btn btn-sm btn-primary">Open FOXSelect</a>
         <h5>Oscillators - SMD HCMOS MHz</h5>
         <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FO8HS____-0.0/SMD/MHz">Open FOXSelect (O8HS)</a> <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FO5HS____-0.0/SMD/MHz">Open FOXSelect (O5HS)</a> <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FO7HH____-0.0/SMD/MHz">Open FOXSelect (O7HH)</a>
+        <h5>Oscillators - Spread Spectrum</h5>
+        <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FS5SC____-0.0/SMD/MHz">Open FOXSelect (S5SC)</a>
         <h5>Crystals - MHz SMD</h5>
         <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FCABS____-0.0/SMD/MHz">Open FOXSelect (CABS)</a>
         <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FC3BS____-0.0/SMD/MHz">Open FOXSelect (C3BS)</a>
