Adding TCXO/VC-TCXO buttons for testing

--- a/public/index.html
+++ b/public/index.html
@@ -70,8 +70,13 @@
       <div class="container" style="border-top: 1px solid #eee; margin-top: 60px; padding-top: 20px;">
         <h5>Default</h5>
         <a href="#" class="foxselect btn btn-sm btn-primary">Open FOXSelect</a>
+        <h5>TCXOs and VC-TCXOs</h5>
+        <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FT1CN____-0.0/SMD/MHz">Open FOXSelect (T1CN)</a>
+        <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FT1CV____-0.0/SMD/MHz">Open FOXSelect (T1CV)</a>
         <h5>Oscillators - SMD HCMOS MHz</h5>
-        <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FO8HS____-0.0/SMD/MHz">Open FOXSelect (O8HS)</a> <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FO5HS____-0.0/SMD/MHz">Open FOXSelect (O5HS)</a> <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FO7HH____-0.0/SMD/MHz">Open FOXSelect (O7HH)</a>
+        <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FO8HS____-0.0/SMD/MHz">Open FOXSelect (O8HS)</a>
+        <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FO5HS____-0.0/SMD/MHz">Open FOXSelect (O5HS)</a>
+        <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FO7HH____-0.0/SMD/MHz">Open FOXSelect (O7HH)</a>
         <h5>Oscillators - Spread Spectrum</h5>
         <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FS5SC____-0.0/SMD/MHz">Open FOXSelect (S5SC)</a>
         <h5>Crystals - MHz SMD</h5>
