Adding Oscillator button

--- a/public/index.html
+++ b/public/index.html
@@ -73,6 +73,8 @@
         <h5>TCXOs and VC-TCXOs</h5>
         <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FT1CN____-0.0/SMD/MHz">Open FOXSelect (T1CN)</a>
         <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FT1CV____-0.0/SMD/MHz">Open FOXSelect (T1CV)</a>
+        <h5>Oscillators - SMD LV-PECL</h5>
+        <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FO3PS____-0.0/SMD/MHz">Open FOXSelect (O3PS)</a>
         <h5>Oscillators - SMD HCMOS MHz</h5>
         <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FO8HS____-0.0/SMD/MHz">Open FOXSelect (O8HS)</a>
         <a href="#" class="foxselect btn btn-sm btn-primary" data-partnumber="FO5HS____-0.0/SMD/MHz">Open FOXSelect (O5HS)</a>
