Updating URL reference to local dev site

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
     <script type='text/javascript'>
     /* <![CDATA[ */
-    var fsloaderVars = {"resturl":"http:\/\/foxelectronics.loco\/wp-json\/foxparts\/v1\/get_options\/"};
+    var fsloaderVars = {"resturl":"https:\/\/foxonline.local\/wp-json\/foxparts\/v1\/get_options\/"};
     /* ]]> */
     </script>
     <style type="text/css">
