Adding warning when logging is off, updating loader JS to work with #rootfoxselect

--- a/public/index.html
+++ b/public/index.html
@@ -58,14 +58,14 @@
         $('#rootbuttons').slideDown();
       });
     </script>
-    <script type="text/javascript" src="%PUBLIC_URL%/part-loader.js"></script>
+    <script type="text/javascript" src="%PUBLIC_URL%/foxselect-loader.js"></script>
     -->
   </head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div class="twbs" id="root"></div>
+    <div class="twbs" id="rootfoxselect"></div>
     <div class="twbs" id="rootbuttons" style="display: none;">
       <div class="container" style="border-top: 1px solid #eee; margin-top: 60px; padding-top: 20px;">
         <h5>Default</h5>
